--- a/tests/functional/shrink_rbdmirror/container/vagrant_variables.yml
+++ b/tests/functional/shrink_rbdmirror/container/vagrant_variables.yml
@@ -42,7 +42,7 @@ disks: "[ '/dev/sda', '/dev/sdb' ]"
 # For more boxes have a look at:
 #   - https://atlas.hashicorp.com/boxes/search?utf8=✓&sort=&provider=virtualbox&q=
 #   - https://download.gluster.org/pub/gluster/purpleidea/vagrant/
-vagrant_box: centos/atomic-host
+vagrant_box: centos/stream9
 #client_vagrant_box: centos/stream9
 #ssh_private_key_path: "~/.ssh/id_rsa"
 # The sync directory changes based on vagrant box
