--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -1024,7 +1024,7 @@
             hosts:
               - {{ ansible_facts['nodename'] }}
           {% if rgw_subnet is defined %}
-          networks: "{{ rgw_subnet }}"
+          networks: "{{ radosgw_address_block }}"
           {% endif %}
           spec:
             rgw_frontend_port: {{ radosgw_frontend_port }}
