tests: use rocky linux 8
wip

Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tox.ini
+++ b/tox.ini
@@ -277,7 +277,7 @@ setenv=
   ANSIBLE_STDOUT_CALLBACK = yaml
   non_container: DEV_SETUP = True
   # Set the vagrant box image to use
-  centos-non_container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream9
+  centos-non_container: CEPH_ANSIBLE_VAGRANT_BOX = rockylinux/8
   centos-container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream9
   INVENTORY = {env:_INVENTORY:hosts}
   container: CONTAINER_DIR = /container
