--- a/infrastructure-playbooks/add-mon.yml
+++ b/infrastructure-playbooks/add-mon.yml
@@ -7,7 +7,7 @@
 # group in your inventory so that the ceph configuration file
 # is created correctly for the new OSD(s).
 - name: Pre-requisites operations for adding new monitor(s)
-  hosts: mons
+  hosts: "{{ mon_group_name|default('mons') }}"
   gather_facts: false
   vars:
     delegate_facts_host: true
@@ -72,7 +72,7 @@
       when: containerized_deployment | bool
 
 - name: Deploy Ceph monitors
-  hosts: mons
+  hosts: "{{ mon_group_name|default('mons') }}"
   gather_facts: false
   become: true
   tasks:
@@ -107,7 +107,7 @@
       when: containerized_deployment | bool
 
 - name: Update config file on OSD nodes
-  hosts: osds
+  hosts: "{{ osd_group_name|default('osds') }}"
   gather_facts: true
   become: true
   tasks:
