--- a/infrastructure-playbooks/shrink-mgr.yml
+++ b/infrastructure-playbooks/shrink-mgr.yml
@@ -22,7 +22,7 @@
         msg: gather facts on all Ceph hosts for following reference
 
 - name: Confirm if user really meant to remove manager from the ceph cluster
-  hosts: mons[0]
+  hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
   vars_prompt:
     - name: ireallymeanit  # noqa: name[casing]
