--- a/infrastructure-playbooks/shrink-rgw.yml
+++ b/infrastructure-playbooks/shrink-rgw.yml
@@ -54,7 +54,7 @@
           - '!ohai'
 
 - name: Shrink rgw service
-  hosts: mons[0]
+  hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
   gather_facts: false
   pre_tasks:
