--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -80,7 +80,16 @@
           - '!ohai'
       delegate_to: "{{ item }}"
       delegate_facts: true
-      with_items: "{{ groups['all'] | difference(groups.get('clients', [])) }}"
+      with_items:
+        - "{{ groups[mon_group_name | default('mons')] | default([]) }}"
+        - "{{ groups[osd_group_name | default('osds')] | default([]) }}"
+        - "{{ groups[mds_group_name | default('mdss')] | default([]) }}"
+        - "{{ groups[rgw_group_name | default('rgws')] | default([]) }}"
+        - "{{ groups[mgr_group_name | default('mgrs')] | default([]) }}"
+        - "{{ groups[rbd_mirror_group_name | default('rbdmirrors')] | default([]) }}"
+        - "{{ groups[nfs_group_name | default('nfss')] | default([]) }}"
+        - "{{ groups[monitoring_group_name | default('monitoring')] | default([]) }}"
+        - "{{ groups[rgwloadbalancer_group_name | default('rgwloadbalancers')] | default([]) }}"
       run_once: true
       when: delegate_facts_host | bool
 
@@ -537,7 +546,7 @@
     health_osd_check_retries: 600
     health_osd_check_delay: 2
     upgrade_ceph_packages: true
-  hosts: osds
+  hosts: "{{ osd_group_name|default('osds') }}"
   tags: osds
   serial: 1
   become: true
