--- a/infrastructure-playbooks/shrink-mds.yml
+++ b/infrastructure-playbooks/shrink-mds.yml
@@ -29,7 +29,7 @@
         tasks_from: container_binary
 
 - name: Perform checks, remove mds and print cluster health
-  hosts: mons[0]
+  hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
   vars_prompt:
     - name: ireallymeanit  # noqa: name[casing]
