--- a/infrastructure-playbooks/shrink-mon.yml
+++ b/infrastructure-playbooks/shrink-mon.yml
@@ -24,7 +24,7 @@
         msg: "gather facts on all Ceph hosts for following reference"
 
 - name: Confirm whether user really meant to remove monitor from the ceph cluster
-  hosts: mons[0]
+  hosts: "{{ mon_group_name | default('mons') }}[0]"
   become: true
   vars_prompt:
     - name: ireallymeanit  # noqa: name[casing]
