--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -11,15 +11,15 @@
       when: not yes_i_know | default(false) | bool
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - nfss
-  - rbdmirrors
-  - clients
-  - mgrs
-  - monitoring
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ nfs_group_name | default('nfss') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ client_group_name | default('clients') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
+  - "{{ monitoring_group_name | default('monitoring') }}"
 
   gather_facts: false
   become: True
@@ -52,7 +52,16 @@
           - '!ohai'
       delegate_to: "{{ item }}"
       delegate_facts: True
-      with_items: "{{ groups['all'] | difference(groups.get('clients', [])) }}"
+      with_items:
+        - "{{ groups[mon_group_name | default('mons')] | default([]) }}"
+        - "{{ groups[osd_group_name | default('osds')] | default([]) }}"
+        - "{{ groups[mds_group_name | default('mdss')] | default([]) }}"
+        - "{{ groups[rgw_group_name | default('rgws')] | default([]) }}"
+        - "{{ groups[mgr_group_name | default('mgrs')] | default([]) }}"
+        - "{{ groups[rbd_mirror_group_name | default('rbdmirrors')] | default([]) }}"
+        - "{{ groups[nfs_group_name | default('nfss')] | default([]) }}"
+        - "{{ groups[monitoring_group_name | default('monitoring')] | default([]) }}"
+        - "{{ groups[rgwloadbalancer_group_name | default('rgwloadbalancers')] | default([]) }}"
       run_once: true
       when: delegate_facts_host | bool
       tags: always
@@ -88,7 +97,7 @@
       tags: fetch_container_image
       when: (group_names != ['clients'] and group_names != ['clients', '_filtered_clients'] and group_names != ['_filtered_clients', 'clients']) or (inventory_hostname == groups.get('_filtered_clients', [''])|first)
 
-- hosts: mons
+- hosts: "{{ mon_group_name | default('mons') }}"
   gather_facts: false
   any_errors_fatal: true
   tasks:
@@ -100,7 +109,7 @@
             status: "In Progress"
             start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: mons
+- hosts: "{{ mon_group_name | default('mons') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -123,7 +132,7 @@
         name: ceph-mgr
       when: groups.get(mgr_group_name, []) | length == 0 or mgr_group_name in group_names
 
-- hosts: mons
+- hosts: "{{ mon_group_name | default('mons') }}"
   gather_facts: false
   any_errors_fatal: true
   tasks:
@@ -135,7 +144,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: mgrs
+- hosts: "{{ mgr_group_name | default('mgrs') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -173,7 +182,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: osds
+- hosts: "{{ osd_group_name | default('osds') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -211,7 +220,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: mdss
+- hosts: "{{ mds_group_name | default('mdss') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -249,7 +258,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: rgws
+- hosts: "{{ rgw_group_name | default('rgws') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -287,7 +296,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: clients
+- hosts: "{{ client_group_name | default('clients') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -326,7 +335,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: nfss
+- hosts: "{{ nfs_group_name | default('nfss') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -364,7 +373,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: rbdmirrors
+- hosts: "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -408,12 +417,12 @@
     - groups.get(monitoring_group_name, []) | length > 0
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - rbdmirrors
-  - mgrs
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
 
   gather_facts: false
   become: True
@@ -448,12 +457,12 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - rbdmirrors
-  - mgrs
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
 
   gather_facts: false
   become: True
@@ -488,14 +497,14 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - rbdmirrors
-  - clients
-  - mgrs
-  - monitoring
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ client_group_name | default('clients') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
+  - "{{ monitoring_group_name | default('monitoring')) }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -516,7 +525,7 @@
         - not _rgw_handler_called | default(false) | bool
 
 
-- hosts: mons[0]
+- hosts: "{{ groups[mon_group_name | default('mons')][0] }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
