--- a/site.yml.sample
+++ b/site.yml.sample
@@ -12,16 +12,16 @@
       when: not yes_i_know | default(false) | bool
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - nfss
-  - rbdmirrors
-  - clients
-  - mgrs
-  - monitoring
-  - rgwloadbalancers
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ nfs_group_name | default('nfss') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ client_group_name | default('clients') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
+  - "{{ monitoring_group_name | default('monitoring') }}"
+  - "{{ rgwloadbalancer_group_name | default('rgwloadbalancers') }}"
 
   gather_facts: false
   any_errors_fatal: true
@@ -57,7 +57,16 @@
           - '!ohai'
       delegate_to: "{{ item }}"
       delegate_facts: True
-      with_items: "{{ groups['all'] | difference(groups.get('clients', [])) }}"
+      with_items:
+        - "{{ groups[mon_group_name | default('mons')] | default([]) }}"
+        - "{{ groups[osd_group_name | default('osds')] | default([]) }}"
+        - "{{ groups[mds_group_name | default('mdss')] | default([]) }}"
+        - "{{ groups[rgw_group_name | default('rgws')] | default([]) }}"
+        - "{{ groups[mgr_group_name | default('mgrs')] | default([]) }}"
+        - "{{ groups[rbd_mirror_group_name | default('rbdmirrors')] | default([]) }}"
+        - "{{ groups[nfs_group_name | default('nfss')] | default([]) }}"
+        - "{{ groups[monitoring_group_name | default('monitoring')] | default([]) }}"
+        - "{{ groups[rgwloadbalancer_group_name | default('rgwloadbalancers')] | default([]) }}"
       run_once: true
       when: delegate_facts_host | bool
 
@@ -86,7 +95,7 @@
     - import_role:
         name: ceph-common
 
-- hosts: mons
+- hosts: "{{ mon_group_name | default('mons') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -127,7 +136,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: mgrs
+- hosts: "{{ mgr_group_name | default('mgrs') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -165,7 +174,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: osds
+- hosts: "{{ osd_group_name | default('osds') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -203,7 +212,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: mdss
+- hosts: "{{ mds_group_name | default('mdss') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -241,7 +250,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: rgws
+- hosts: "{{ rgw_group_name | default('rgws') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -279,7 +288,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: clients
+- hosts: "{{ client_group_name | default('clients') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -318,7 +327,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: nfss
+- hosts: "{{ nfs_group_name | default('nfss') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -356,7 +365,7 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: rbdmirrors
+- hosts: "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -395,7 +404,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts:
-    - rgwloadbalancers
+    - "{{ rgwloadbalancer_group_name | default('rgwloadbalancers') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -433,12 +442,12 @@
     - groups.get(monitoring_group_name, []) | length > 0
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - rbdmirrors
-  - mgrs
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
 
   gather_facts: false
   become: True
@@ -473,14 +482,14 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts:
-  - mons
-  - osds
-  - mdss
-  - rgws
-  - rbdmirrors
-  - clients
-  - mgrs
-  - monitoring
+  - "{{ mon_group_name | default('mons') }}"
+  - "{{ osd_group_name | default('osds') }}"
+  - "{{ mds_group_name | default('mdss') }}"
+  - "{{ rgw_group_name | default('rgws') }}"
+  - "{{ rbd_mirror_group_name | default('rbdmirrors') }}"
+  - "{{ client_group_name | default('clients') }}"
+  - "{{ mgr_group_name | default('mgrs') }}"
+  - "{{ monitoring_group_name | default('monitoring')) }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
@@ -500,7 +509,7 @@
         - not _rbdmirror_handler_called | default(false) | bool
         - not _rgw_handler_called | default(false) | bool
 
-- hosts: mons
+- hosts: "{{ mon_group_name | default('mons') }}"
   gather_facts: false
   become: True
   any_errors_fatal: true
