define all_group_name

--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -40,6 +40,7 @@ ceph_release_num:
 cluster: ceph
 
 # Inventory host group variables
+all_group_name: all     # useful if runned against a global inventory that includes non-ceph hosts
 mon_group_name: mons
 osd_group_name: osds
 rgw_group_name: rgws
