cephadm-adopt: Alertmanager placement count missing
Regression from #7576. Alertmanager placement count was missing
after migration to ceph_orch_apply module

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -1475,7 +1475,7 @@
         CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
 
     - name: With dashboard enabled
-      when: dashboard_enabled | bool
+      when: dashboard_enabled | bool and groups.get(monitoring_group_name, []) | length > 0
       block:
         - name: Update the placement of alertmanager hosts
           ceph_orch_apply:
@@ -1485,6 +1485,7 @@
               service_id: "{{ ansible_facts['hostname'] }}"
               placement:
                 label: "{{ monitoring_group_name }}"
+                count: "{{ groups.get(monitoring_group_name, []) | length }}"
               {% if grafana_server_addr is defined %}
               networks:
               - {{ grafana_server_addr }}
