--- a/roles/ceph-dashboard/tasks/configure_grafana_layouts.yml
+++ b/roles/ceph-dashboard/tasks/configure_grafana_layouts.yml
@@ -10,4 +10,5 @@
   delegate_to: "{{ groups[mon_group_name][0] }}"
   run_once: true
   changed_when: false
+  ignore_errors: true
   when: containerized_deployment | bool
