stable-9.0: switch from main to squid
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/rbd_map_devices.yml --extra-vars "\
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
   "
 
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/{env:PURGE_PLAYBOOK:purge-cluster.yml} --extra-vars "\
@@ -54,7 +54,7 @@ commands=
       remove_packages=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
   "
 
   # re-setup lvm, we exclude osd2 given this node uses lvm batch scenario (see corresponding inventory host file)
@@ -79,7 +79,7 @@ commands=
       ireallymeanit=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
   "
 
   # set up the cluster again
@@ -161,7 +161,7 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml --extra-vars "\
       ireallymeanit=yes \
-      ceph_docker_image_tag=latest-main-devel \
+      ceph_docker_image_tag=latest-squid-devel \
       ceph_docker_registry=quay.io \
       ceph_docker_image=ceph/daemon-base \
       ceph_docker_registry_auth=True \
@@ -248,7 +248,7 @@ commands=
 [storage-inventory]
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/storage-inventory.yml --extra-vars "\
-    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-main} \
+    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
   "
 
 [cephadm-adopt]
@@ -299,11 +299,11 @@ setenv=
   shrink_rbdmirror: RBDMIRROR_TO_KILL = rbd-mirror0
   shrink_rgw: RGW_TO_KILL = rgw0.rgw0
 
-  CEPH_DOCKER_IMAGE_TAG = latest-main
+  CEPH_DOCKER_IMAGE_TAG = latest-squid
   CEPH_DOCKER_IMAGE_TAG_BIS = latest-bis-main
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-main
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-squid
 
-  switch_to_containers: CEPH_DOCKER_IMAGE_TAG = latest-main-devel
+  switch_to_containers: CEPH_DOCKER_IMAGE_TAG = latest-squid-devel
 
 deps= -r{toxinidir}/tests/requirements.txt
 changedir=
