--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -511,7 +511,7 @@ dummy:
 # DOCKER #
 ##########
 #ceph_docker_image: "ceph/daemon-base"
-#ceph_docker_image_tag: latest-main
+#ceph_docker_image_tag: latest-squid
 #ceph_docker_registry: quay.io
 #ceph_docker_registry_auth: false
 # ceph_docker_registry_username:
