--- a/tox-shrink_osd.ini
+++ b/tox-shrink_osd.ini
@@ -70,9 +70,9 @@ setenv=
   container: PURGE_PLAYBOOK = purge-container-cluster.yml
   non_container: PLAYBOOK = site.yml.sample
 
-  CEPH_DOCKER_IMAGE_TAG = latest-main
+  CEPH_DOCKER_IMAGE_TAG = latest-squid
   CEPH_DOCKER_IMAGE_TAG_BIS = latest-bis-main
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-main
+  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-squid
 
 deps= -r{toxinidir}/tests/requirements.txt
 changedir=
