stable-9.0: switch to ceph/ceph
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -510,8 +510,8 @@ dummy:
 ##########
 # DOCKER #
 ##########
-#ceph_docker_image: "ceph/daemon-base"
-#ceph_docker_image_tag: latest-squid
+#ceph_docker_image: "ceph/ceph"
+#ceph_docker_image_tag: v19
 #ceph_docker_registry: quay.io
 #ceph_docker_registry_auth: false
 # ceph_docker_registry_username:
