--- a/tox.ini
+++ b/tox.ini
@@ -45,16 +45,16 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/rbd_map_devices.yml --extra-vars "\
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
-      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
+      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/ceph} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:v19} \
   "
 
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/{env:PURGE_PLAYBOOK:purge-cluster.yml} --extra-vars "\
       ireallymeanit=yes \
       remove_packages=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
-      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
+      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/ceph} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:v19} \
   "
 
   # re-setup lvm, we exclude osd2 given this node uses lvm batch scenario (see corresponding inventory host file)
@@ -78,8 +78,8 @@ commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/purge-dashboard.yml --extra-vars "\
       ireallymeanit=yes \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
-      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon-base} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
+      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/ceph} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:v19} \
   "
 
   # set up the cluster again
@@ -161,9 +161,9 @@ commands=
 commands=
   ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml --extra-vars "\
       ireallymeanit=yes \
-      ceph_docker_image_tag=latest-squid-devel \
+      ceph_docker_image_tag=v19 \
       ceph_docker_registry=quay.io \
-      ceph_docker_image=ceph/daemon-base \
+      ceph_docker_image=ceph/ceph \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
@@ -248,7 +248,7 @@ commands=
 [storage-inventory]
 commands=
   ansible-playbook -vv --diff -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/storage-inventory.yml --extra-vars "\
-    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-squid} \
+    ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:v19} \
   "
 
 [cephadm-adopt]
@@ -298,12 +298,6 @@ setenv=
   shrink_mon: MON_TO_KILL = mon2
   shrink_rbdmirror: RBDMIRROR_TO_KILL = rbd-mirror0
   shrink_rgw: RGW_TO_KILL = rgw0.rgw0
-
-  CEPH_DOCKER_IMAGE_TAG = latest-squid
-  CEPH_DOCKER_IMAGE_TAG_BIS = latest-bis-main
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-squid
-
-  switch_to_containers: CEPH_DOCKER_IMAGE_TAG = latest-squid-devel
 
 deps= -r{toxinidir}/tests/requirements.txt
 changedir=
@@ -367,7 +361,7 @@ commands=
   all_daemons,all_daemons_ipv6,collocation: py.test --reruns 20 --reruns-delay 3 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests
 
   # handlers/idempotency test
-  all_daemons,all_daemon_ipv6,all_in_one,collocation: ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "no_log_on_ceph_key_tasks=false delegate_facts_host={env:DELEGATE_FACTS_HOST:True} ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG_BIS:latest-bis-main} ceph_dev_branch={env:CEPH_DEV_BRANCH:main} ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} yes_i_know=true" --extra-vars @ceph-override.json
+  all_daemons,all_daemon_ipv6,all_in_one,collocation: ansible-playbook -vv --diff -i {changedir}/{env:INVENTORY} {toxinidir}/{env:PLAYBOOK:site.yml.sample} --extra-vars "no_log_on_ceph_key_tasks=false delegate_facts_host={env:DELEGATE_FACTS_HOST:True} ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG_BIS:latest-bis-main} ceph_docker_image={env:CEPH_DOCKER_IMAGE_BIS:ceph/daemon-base} ceph_dev_branch={env:CEPH_DEV_BRANCH:main} ceph_dev_sha1={env:CEPH_DEV_SHA1:latest} yes_i_know=true" --extra-vars @ceph-override.json
 
   purge: {[purge]commands}
   purge_dashboard: {[purge-dashboard]commands}
