--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -502,8 +502,8 @@ ceph_tcmalloc_max_total_thread_cache: 134217728
 ##########
 # DOCKER #
 ##########
-ceph_docker_image: "ceph/daemon-base"
-ceph_docker_image_tag: latest-squid
+ceph_docker_image: "ceph/ceph"
+ceph_docker_image_tag: v19
 ceph_docker_registry: quay.io
 ceph_docker_registry_auth: false
 # ceph_docker_registry_username:
