mergify: add stable-9.0
This adds the mergify support for stable-9.0

Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -56,6 +56,13 @@ pull_request_rules:
     conditions:
       - label=backport-stable-8.0
     name: backport stable-8.0
+  - actions:
+      backport:
+        branches:
+          - stable-9.0
+    conditions:
+      - label=backport-stable-9.0
+    name: backport stable-9.0
 commands_restrictions:
   backport:
     conditions:
