cephadm-adopt: fix ssl condition in rgw placement task
rgw daemons fail to start as they were looking for
ssl certificates while none were available.

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -1028,7 +1028,7 @@
           {% endif %}
           spec:
             rgw_frontend_port: {{ radosgw_frontend_port }}
-          {% if radosgw_frontend_ssl_certificate is defined %}
+          {% if radosgw_frontend_ssl_certificate | length > 0 %}
             {{ "ssl: true" }}
           {% endif %}
           extra_container_args:
