Adopt: placement of alertmanager hosts fails
- Task fails as count is set as a string while a number
is expected
- typo service_name instead of service_type

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -1527,6 +1527,7 @@
               service_id: "{{ ansible_facts['hostname'] }}"
               placement:
                 label: "{{ monitoring_group_name }}"
+                count: {{ groups.get(monitoring_group_name, []) | length }}
               {% if grafana_server_addr is defined %}
               networks:
               - {{ grafana_server_addr }}
@@ -1545,7 +1546,7 @@
           ceph_orch_apply:
             fsid: "{{ fsid }}"
             spec: |
-              service_name: prometheus
+              service_type: prometheus
               service_id: "{{ ansible_facts['hostname'] }}"
               placement:
                 label: {{ monitoring_group_name }}
