rolling_update: Fix Remove FSMap sanity checks task
cluster name was not set as cluster defaults were
not loaded

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -1212,6 +1212,9 @@
   become: True
   gather_facts: false
   tasks:
+    - import_role:
+        name: ceph-defaults
+        
     # workaround to prevent mon crash https://access.redhat.com/solutions/7020523
     - name: Remove FSMap sanity checks
       run_once: true
