Extend ansible_version check to allow v2.17.x
Signed-off-by: Daniel Swarbrick <daniel.swarbrick1@ionos.com>
(cherry picked from commit e786072df7e7e966480816308e0cfbf66fe702d3)

--- a/roles/ceph-validate/tasks/check_system.yml
+++ b/roles/ceph-validate/tasks/check_system.yml
@@ -6,8 +6,8 @@
 
 - name: Fail on unsupported ansible version
   ansible.builtin.fail:
-    msg: "Ansible version must be either 2.15 or 2.16!"
-  when: ansible_version.minor|int not in [15, 16]
+    msg: "Ansible version must be either 2.15, 2.16 or 2.17!"
+  when: ansible_version.minor|int not in [15, 16, 17]
 
 - name: Fail on unsupported system
   ansible.builtin.fail:
